--- a/KKVideoPlayer/KKVideoPlayer.csproj
+++ b/KKVideoPlayer/KKVideoPlayer.csproj
@@ -4,6 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+
+    <Version>1.0.0</Version>
+    <ApplicationIcon>KKPlayer.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
