feat: Video list type properties ui visuals improvement.

--- a/KKVideoPlayer/KKVideoPlayer.csproj
+++ b/KKVideoPlayer/KKVideoPlayer.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoCompleteTextBox" Version="1.6.0" />
     <PackageReference Include="Brotli.NET" Version="2.1.1" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="FFME.Windows" Version="4.4.350" />
